Fix scrollbars on firefox, add waitress

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -30,6 +30,7 @@ body {
     flex-direction: column;
     overflow: scroll;
     height:100vh;
+    scrollbar-width: None;
 }
 
 .light {
@@ -67,6 +68,7 @@ body {
     flex-direction: column;
     overflow: scroll;
     height:100vh;
+    scrollbar-width: None;
 }
 
 .quick_control {
